[package]
name = "cucumbe_rs"
version = "0.1.0"
authors = ["Nick Blantz <nicholasblantz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
serde = "1.0.104"
serde_bytes = "0.11.3"
serde_derive = "1.0.104"
serde_json = "1.0.44"